@@ -98,7 +98,7 @@
      <x>0</x>
      <y>0</y>
      <width>782</width>
-     <height>21</height>
+     <height>20</height>
     </rect>
    </property>
    <widget class="QMenu" name="menuOpen">
@@ -234,7 +234,7 @@
   </action>
   <action name="actionAddKey">
    <property name="text">
-    <string>luks add key</string>
+    <string>add a key to a volume</string>
    </property>
    <property name="shortcut">
     <string>Ctrl+U</string>
@@ -242,7 +242,7 @@
   </action>
   <action name="actionDeleteKey">
    <property name="text">
-    <string>luks delete key</string>
+    <string>delete a key from a volume</string>
    </property>
    <property name="shortcut">
     <string>Ctrl+W</string>
