@@ -193,3 +193,4 @@ version 4.7.3
 -- fix issues with Qt5 build
 -- show devices even when they have neither partitions nor recognizable file systems.This is useful for TrueCrypt system volumes or
    normal TrueCrypt volumes that are not in partitions.
+-- add an ability to change TrueCrypt volume key.
